--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,86 +82,86 @@ afterEvaluate {
 	}
 }
 dependencies {
-	implementation('com.github.KotatsuApp:kotatsu-parsers:d8cb38a9be') {
+	implementation(libs.kotatsu.parsers) {
 		exclude group: 'org.json', module: 'json'
 	}
 
-	coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.2'
-	implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.0.20'
-	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0'
+	coreLibraryDesugaring libs.desugar.jdk.libs
+	implementation libs.kotlin.stdlib
+	implementation libs.kotlinx.coroutines.android
 
-	implementation 'androidx.appcompat:appcompat:1.7.0'
-	implementation 'androidx.core:core-ktx:1.13.1'
-	implementation 'androidx.activity:activity-ktx:1.9.2'
-	implementation 'androidx.fragment:fragment-ktx:1.8.4'
-	implementation 'androidx.transition:transition-ktx:1.5.1'
-	implementation 'androidx.collection:collection-ktx:1.4.4'
-	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.6'
-	implementation 'androidx.lifecycle:lifecycle-service:2.8.6'
-	implementation 'androidx.lifecycle:lifecycle-process:2.8.6'
-	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-	implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-	implementation 'androidx.recyclerview:recyclerview:1.3.2'
-	implementation 'androidx.viewpager2:viewpager2:1.1.0'
-	implementation 'androidx.preference:preference-ktx:1.2.1'
-	implementation 'androidx.biometric:biometric-ktx:1.2.0-alpha05'
-	implementation 'com.google.android.material:material:1.12.0'
-	implementation 'androidx.lifecycle:lifecycle-common-java8:2.8.6'
-	implementation 'androidx.webkit:webkit:1.11.0'
+	implementation libs.appcompat
+	implementation libs.core.ktx
+	implementation libs.activity.ktx
+	implementation libs.fragment.ktx
+	implementation libs.transition.ktx
+	implementation libs.collection.ktx
+	implementation libs.lifecycle.viewmodel.ktx
+	implementation libs.lifecycle.service
+	implementation libs.lifecycle.process
+	implementation libs.androidx.constraintlayout
+	implementation libs.androidx.swiperefreshlayout
+	implementation libs.androidx.recyclerview
+	implementation libs.androidx.viewpager2
+	implementation libs.androidx.preference.ktx
+	implementation libs.androidx.biometric.ktx
+	implementation libs.material
+	implementation libs.androidx.lifecycle.common.java8
+	implementation libs.androidx.webkit
 
-	implementation 'androidx.work:work-runtime:2.9.1'
+	implementation libs.androidx.work.runtime
 	//noinspection GradleDependency
-	implementation('com.google.guava:guava:33.2.1-android') {
+	implementation(libs.guava) {
 		exclude group: 'com.google.guava', module: 'failureaccess'
 		exclude group: 'org.checkerframework', module: 'checker-qual'
 		exclude group: 'com.google.j2objc', module: 'j2objc-annotations'
 	}
 
-	implementation 'androidx.room:room-runtime:2.6.1'
-	implementation 'androidx.room:room-ktx:2.6.1'
-	ksp 'androidx.room:room-compiler:2.6.1'
+	implementation libs.androidx.room.runtime
+	implementation libs.androidx.room.ktx
+	ksp libs.androidx.room.compiler
 
-	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
-	implementation 'com.squareup.okhttp3:okhttp-tls:4.12.0'
-	implementation 'com.squareup.okhttp3:okhttp-dnsoverhttps:4.12.0'
-	implementation 'com.squareup.okio:okio:3.9.1'
+	implementation libs.okhttp
+	implementation libs.okhttp.tls
+	implementation libs.okhttp.dnsoverhttps
+	implementation libs.okio
 
-	implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl:4.3.2'
-	implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl-viewbinding:4.3.2'
+	implementation libs.adapterdelegates4.kotlin.dsl
+	implementation libs.adapterdelegates4.kotlin.dsl.viewbinding
 
-	implementation 'com.google.dagger:hilt-android:2.52'
-	kapt 'com.google.dagger:hilt-compiler:2.52'
-	implementation 'androidx.hilt:hilt-work:1.2.0'
-	kapt 'androidx.hilt:hilt-compiler:1.2.0'
+	implementation libs.hilt.android
+	kapt libs.hilt.compiler
+	implementation libs.androidx.hilt.work
+	kapt libs.androidx.hilt.compiler
 
-	implementation 'io.coil-kt:coil-base:2.7.0'
-	implementation 'io.coil-kt:coil-svg:2.7.0'
-	implementation 'com.github.KotatsuApp:subsampling-scale-image-view:e04098de68'
-	implementation 'com.github.solkin:disk-lru-cache:1.4'
-	implementation 'io.noties.markwon:core:4.6.2'
+	implementation libs.coil.base
+	implementation libs.coil.svg
+	implementation libs.subsampling.scale.image.view
+	implementation libs.disk.lru.cache
+	implementation libs.core
 
-	implementation 'ch.acra:acra-http:5.11.4'
-	implementation 'ch.acra:acra-dialog:5.11.4'
+	implementation libs.acra.http
+	implementation libs.acra.dialog
 
-	implementation 'org.conscrypt:conscrypt-android:2.5.2'
+	implementation libs.conscrypt.android
 
-	debugImplementation 'com.squareup.leakcanary:leakcanary-android:3.0-alpha-8'
-	debugImplementation 'com.github.Koitharu:WorkInspector:5778dd1747'
+	debugImplementation libs.leakcanary.android
+	debugImplementation libs.workinspector
 
-	testImplementation 'junit:junit:4.13.2'
-	testImplementation 'org.json:json:20240303'
-	testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.9.0'
+	testImplementation libs.junit
+	testImplementation libs.json
+	testImplementation libs.kotlinx.coroutines.test
 
-	androidTestImplementation 'androidx.test:runner:1.6.1'
-	androidTestImplementation 'androidx.test:rules:1.6.1'
-	androidTestImplementation 'androidx.test:core-ktx:1.6.1'
-	androidTestImplementation 'androidx.test.ext:junit-ktx:1.2.1'
+	androidTestImplementation libs.androidx.runner
+	androidTestImplementation libs.androidx.rules
+	androidTestImplementation libs.androidx.core.ktx
+	androidTestImplementation libs.androidx.junit.ktx
 
-	androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.9.0'
+	androidTestImplementation libs.kotlinx.coroutines.test
 
-	androidTestImplementation 'androidx.room:room-testing:2.6.1'
-	androidTestImplementation 'com.squareup.moshi:moshi-kotlin:1.15.1'
+	androidTestImplementation libs.androidx.room.testing
+	androidTestImplementation libs.moshi.kotlin
 
-	androidTestImplementation 'com.google.dagger:hilt-android-testing:2.52'
-	kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.52'
+	androidTestImplementation libs.hilt.android.testing
+	kaptAndroidTest libs.hilt.android.compiler
 }
