--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:8.7.0'
-		classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:2.0.20'
-		classpath 'com.google.dagger:hilt-android-gradle-plugin:2.52'
-		classpath 'com.google.devtools.ksp:symbol-processing-gradle-plugin:2.0.20-1.0.25'
+		classpath libs.gradle
+		classpath libs.kotlin.gradle.plugin
+		classpath libs.hilt.android.gradle.plugin
+		classpath libs.symbol.processing.gradle.plugin
 	}
 }
 
