--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,7 @@ afterEvaluate {
 	}
 }
 dependencies {
-	implementation('com.github.KotatsuApp:kotatsu-parsers:3d5cc5ceff') {
+	implementation('com.github.KotatsuApp:kotatsu-parsers:1.4') {
 		exclude group: 'org.json', module: 'json'
 	}
 
