--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,31 +87,32 @@ dependencies {
 	}
 
 	coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.2'
-	implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.0.20'
+	implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.0.21'
 	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0'
+	implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-guava:1.9.0'
 
 	implementation 'androidx.appcompat:appcompat:1.7.0'
-	implementation 'androidx.core:core-ktx:1.13.1'
+	implementation 'androidx.core:core-ktx:1.15.0'
 	implementation 'androidx.activity:activity-ktx:1.9.3'
 	implementation 'androidx.fragment:fragment-ktx:1.8.5'
 	implementation 'androidx.transition:transition-ktx:1.5.1'
-	implementation 'androidx.collection:collection-ktx:1.4.4'
-	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.6'
-	implementation 'androidx.lifecycle:lifecycle-service:2.8.6'
-	implementation 'androidx.lifecycle:lifecycle-process:2.8.6'
-	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+	implementation 'androidx.collection:collection-ktx:1.4.5'
+	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7'
+	implementation 'androidx.lifecycle:lifecycle-service:2.8.7'
+	implementation 'androidx.lifecycle:lifecycle-process:2.8.7'
+	implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
 	implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 	implementation 'androidx.recyclerview:recyclerview:1.3.2'
 	implementation 'androidx.viewpager2:viewpager2:1.1.0'
 	implementation 'androidx.preference:preference-ktx:1.2.1'
 	implementation 'androidx.biometric:biometric-ktx:1.2.0-alpha05'
 	implementation 'com.google.android.material:material:1.12.0'
-	implementation 'androidx.lifecycle:lifecycle-common-java8:2.8.6'
-	implementation 'androidx.webkit:webkit:1.11.0'
+	implementation 'androidx.lifecycle:lifecycle-common-java8:2.8.7'
+	implementation 'androidx.webkit:webkit:1.12.1'
 
-	implementation 'androidx.work:work-runtime:2.9.1'
+	implementation 'androidx.work:work-runtime:2.10.0'
 	//noinspection GradleDependency
-	implementation('com.google.guava:guava:33.2.1-android') {
+	implementation('com.google.guava:guava:33.3.1-android') {
 		exclude group: 'com.google.guava', module: 'failureaccess'
 		exclude group: 'org.checkerframework', module: 'checker-qual'
 		exclude group: 'com.google.j2objc', module: 'j2objc-annotations'
@@ -143,10 +144,10 @@ dependencies {
 	implementation 'com.github.solkin:disk-lru-cache:1.4'
 	implementation 'io.noties.markwon:core:4.6.2'
 
-	implementation 'ch.acra:acra-http:5.11.4'
-	implementation 'ch.acra:acra-dialog:5.11.4'
+	implementation 'ch.acra:acra-http:5.12.0'
+	implementation 'ch.acra:acra-dialog:5.12.0'
 
-	implementation 'org.conscrypt:conscrypt-android:2.5.2'
+	implementation 'org.conscrypt:conscrypt-android:2.5.3'
 
 	debugImplementation 'com.squareup.leakcanary:leakcanary-android:3.0-alpha-8'
 	debugImplementation 'com.github.Koitharu:WorkInspector:5778dd1747'
@@ -155,7 +156,7 @@ dependencies {
 	testImplementation 'org.json:json:20240303'
 	testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.9.0'
 
-	androidTestImplementation 'androidx.test:runner:1.6.1'
+	androidTestImplementation 'androidx.test:runner:1.6.2'
 	androidTestImplementation 'androidx.test:rules:1.6.1'
 	androidTestImplementation 'androidx.test:core-ktx:1.6.1'
 	androidTestImplementation 'androidx.test.ext:junit-ktx:1.2.1'
