--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ acra = "5.12.0"
 activity = "1.9.3"
 adapterdelegates = "4.3.2"
 appcompat = "1.7.0"
+avifDecoder = "1.1.1.14d8e3c4"
 biometric = "1.2.0-alpha05"
 coil = "3.0.1"
 collections = "1.4.5"
@@ -28,12 +29,13 @@ material = "1.12.0"
 moshi = "1.15.1"
 okhttp = "4.12.0"
 okio = "3.9.1"
+parsers = "f610ae6412"
 preference = "1.2.1"
 recyclerview = "1.3.2"
 room = "2.6.1"
 runner = "1.6.2"
 rules = "1.6.1"
-subsamplingScaleImageView = "e04098de68"
+ssiv = "d1d10a6975"
 swiperefreshlayout = "1.1.0"
 kspPlugin = "2.0.21-1.0.26"
 transition = "1.5.1"
@@ -68,8 +70,11 @@ androidx-viewpager2 = { module = "androidx.viewpager2:viewpager2", version.ref =
 androidx-webkit = { module = "androidx.webkit:webkit", version.ref = "webkit" }
 androidx-work-runtime = { module = "androidx.work:work-runtime", version.ref = "workRuntime" }
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
-coil-base = { module = "io.coil-kt:coil-base", version.ref = "coil" }
-coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
+avif-decoder = { module = "org.aomedia.avif.android:avif", version.ref = "avifDecoder" }
+coil-core = { module = "io.coil-kt.coil3:coil-core", version.ref = "coil" }
+coil-network = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coil" }
+coil-svg = { module = "io.coil-kt.coil3:coil-svg", version.ref = "coil" }
+coil-gif = { module = "io.coil-kt.coil3:coil-gif", version.ref = "coil" }
 collection-ktx = { module = "androidx.collection:collection-ktx", version.ref = "collections" }
 conscrypt-android = { module = "org.conscrypt:conscrypt-android", version.ref = "conscrypt" }
 core = { module = "io.noties.markwon:core", version.ref = "core" }
@@ -101,7 +106,7 @@ okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-dnsoverhttps = { module = "com.squareup.okhttp3:okhttp-dnsoverhttps", version.ref = "okhttp" }
 okhttp-tls = { module = "com.squareup.okhttp3:okhttp-tls", version.ref = "okhttp" }
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
-subsampling-scale-image-view = { module = "com.github.KotatsuApp:subsampling-scale-image-view", version.ref = "subsamplingScaleImageView" }
+subsampling-scale-image-view = { module = "com.github.KotatsuApp:subsampling-scale-image-view", version.ref = "ssiv" }
 symbol-processing-gradle-plugin = { module = "com.google.devtools.ksp:symbol-processing-gradle-plugin", version.ref = "kspPlugin" }
 transition-ktx = { module = "androidx.transition:transition-ktx", version.ref = "transition" }
 workinspector = { module = "com.github.Koitharu:WorkInspector", version.ref = "workinspector" }
