--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,7 +26,7 @@ ksp = "2.0.21-1.0.28"
 leakcanary = "3.0-alpha-8"
 lifecycle = "2.8.7"
 markwon = "4.6.2"
-material = "1.12.0"
+material = "1.13.0-alpha08"
 moshi = "1.15.1"
 okhttp = "4.12.0"
 okio = "3.9.1"
