--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ adapterdelegates = "4.3.2"
 appcompat = "1.7.0"
 avifDecoder = "1.1.1.14d8e3c4"
 biometric = "1.2.0-alpha05"
-coil = "3.0.3"
+coil = "3.0.4"
 collections = "1.4.5"
 conscrypt = "2.5.3"
 constraintlayout = "2.2.0"
@@ -30,7 +30,7 @@ material = "1.12.0"
 moshi = "1.15.1"
 okhttp = "4.12.0"
 okio = "3.9.1"
-parsers = "8bc51b3b79"
+parsers = "1.5"
 preference = "1.2.1"
 recyclerview = "1.3.2"
 room = "2.6.1"
