--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,32 @@
+pluginManagement {
+	repositories {
+		google {
+			content {
+				includeGroupByRegex("com\\.android.*")
+				includeGroupByRegex("com\\.google.*")
+				includeGroupByRegex("androidx.*")
+			}
+		}
+		mavenCentral()
+		gradlePluginPortal()
+		maven {
+			url 'https://jitpack.io'
+			content {
+				includeGroupByRegex("com\\.github.*")
+			}
+		}
+	}
+}
+dependencyResolutionManagement {
+	repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+	repositories {
+		google()
+		mavenCentral()
+		maven {
+			url 'https://jitpack.io'
+		}
+	}
+}
+
 include ':app'
 rootProject.name = "Kotatsu"
