--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,7 +30,7 @@ material = "1.12.0"
 moshi = "1.15.1"
 okhttp = "4.12.0"
 okio = "3.9.1"
-parsers = "1.5"
+parsers = "ebcce4f2ec"
 preference = "1.2.1"
 recyclerview = "1.3.2"
 room = "2.6.1"
