--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,22 @@ android {
 			generateLocaleConfig true
 		}
 	}
+	signingConfigs {
+		release {
+			def tmpFilePath = System.getProperty("user.home") + "/work/_temp/keystore/"
+			def allFilesFromDir = new File(tmpFilePath).listFiles()
+
+			if (allFilesFromDir != null) {
+				def keystoreFile = allFilesFromDir.first()
+				keystoreFile.renameTo("keystore/kotatsu.jks")
+			}
+
+			storeFile = file("keystore/kotatsu.jks")
+			storePassword System.getenv("SIGNING_STORE_PASSWORD")
+			keyAlias System.getenv("SIGNING_KEY_ALIAS")
+			keyPassword System.getenv("SIGNING_KEY_PASSWORD")
+		}
+	}
 	buildTypes {
 		debug {
 			applicationIdSuffix = '.debug'
@@ -45,6 +61,7 @@ android {
 			minifyEnabled true
 			shrinkResources true
 			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+			signingConfig signingConfigs.release
 		}
 		nightly {
 			initWith release
