--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,5 @@ plugins {
 	alias(libs.plugins.kotlin) apply false
 	alias(libs.plugins.hilt) apply false
 	alias(libs.plugins.ksp) apply false
+	alias(libs.plugins.room) apply false
 }
