--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ kotlin.code.style=official
 org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
 android.enableR8.fullMode=true
 android.nonFinalResIds=false
-kapt.use.k2=true
+kapt.use.k2=false
