--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,7 +31,7 @@ material = "1.13.0-alpha10"
 moshi = "1.15.2"
 okhttp = "4.12.0"
 okio = "3.10.2"
-parsers = "1.6"
+parsers = "ddb9b13df7"
 preference = "1.2.1"
 recyclerview = "1.4.0"
 room = "2.6.1"
