--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,6 +127,7 @@ dependencies {
 
 	implementation libs.androidx.appcompat
 	implementation libs.androidx.core
+	implementation libs.androidx.core.splashscreen
 	implementation libs.androidx.activity
 	implementation libs.androidx.fragment
 	implementation libs.androidx.transition
