--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ android {
 		nightly {
 			initWith release
 			applicationIdSuffix = '.nightly'
+			minifyEnabled true
+  			shrinkResources true
+  			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
 		}
 	}
 	buildFeatures {
