--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,23 +7,23 @@ avifDecoder = "1.1.1.14d8e3c4"
 biometric = "1.2.0-alpha05"
 coil = "3.1.0"
 collections = "1.5.0"
-#noinspection GradleDependency - 2.5.3 cause crashes
+#noinspection NewerVersionAvailable,GradleDependency - 2.5.3 cause crashes
 conscrypt = "2.5.2"
 constraintlayout = "2.2.1"
 coreKtx = "1.15.0"
 coroutines = "1.10.1"
 desugar = "2.1.5"
-diskLruCache = "1.4"
+diskLruCache = "1.5"
 fragment = "1.8.6"
-gradle = "8.8.2"
-guava = "33.3.1-android"
-dagger = "2.55"
+gradle = "8.9.0"
+guava = "33.4.5-android"
+dagger = "2.56"
 hilt = "1.2.0"
 json = "20250107"
 junit = "4.13.2"
 junitKtx = "1.2.1"
-kotlin = "2.1.10"
-ksp = "2.1.10-1.0.29"
+kotlin = "2.1.20"
+ksp = "2.1.20-1.0.31"
 leakcanary = "3.0-alpha-8"
 lifecycle = "2.8.7"
 markwon = "4.6.2"
@@ -31,7 +31,7 @@ material = "1.13.0-alpha11"
 moshi = "1.15.2"
 okhttp = "4.12.0"
 okio = "3.10.2"
-parsers = "5420290564"
+parsers = "bebc615376"
 preference = "1.2.1"
 recyclerview = "1.4.0"
 room = "2.6.1"
