--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ android {
 			'-opt-in=kotlin.contracts.ExperimentalContracts',
 			'-opt-in=coil3.annotation.ExperimentalCoilApi',
 			'-opt-in=coil3.annotation.InternalCoilApi',
+			'-Xjspecify-annotations=strict',
+			'-Xtype-enhancement-improvements-strict-mode',
 		]
 	}
 	room {
