--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
 		android:hasFragileUserData="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
+		android:localeConfig="@xml/locales_config"
 		android:largeHeap="true"
 		android:networkSecurityConfig="@xml/network_security_config"
 		android:requestLegacyExternalStorage="true"
