--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -45,6 +45,10 @@ viewpager2 = "1.1.0"
 webkit = "1.13.0"
 workRuntime = "2.10.1"
 workinspector = "1.2"
+mlkit = "16.0.0-beta6"
+mlkit-text-recognition = "17.2.0"
+mlkit-translate = "17.0.2"
+mlkit-language = "17.0.1"
 
 [libraries]
 acra-dialog = { module = "ch.acra:acra-dialog", version.ref = "acra" }
@@ -109,6 +113,10 @@ okhttp-tls = { module = "com.squareup.okhttp3:okhttp-tls", version.ref = "okhttp
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 ssiv = { module = "com.github.KotatsuApp:subsampling-scale-image-view", version.ref = "ssiv" }
 workinspector = { module = "com.github.Koitharu:WorkInspector", version.ref = "workinspector" }
+mlkit-text-recognition = { module = "com.google.mlkit:text-recognition-v2", version.ref = "mlkit-text-recognition" }
+mlkit-translate = { module = "com.google.mlkit:translate", version.ref = "mlkit" }
+mlkit-language = { module = "com.google.mlkit:language-id", version.ref = "mlkit-language" }
+mlkit-text-recognition-japanese = { module = "com.google.mlkit:text-recognition-japanese-v2", version.ref = "mlkit" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "gradle" }
