Page image picker; ability to use manga page as custom cover

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -269,6 +269,24 @@
 		<activity
 			android:name="org.koitharu.kotatsu.tracker.ui.debug.TrackerDebugActivity"
 			android:label="@string/tracker_debug_info" />
+		<activity
+			android:name="org.koitharu.kotatsu.picker.ui.PageImagePickActivity"
+			android:exported="true"
+			android:label="@string/pick_manga_page">
+			<intent-filter>
+				<action android:name="android.intent.action.GET_CONTENT" />
+
+				<category android:name="android.intent.category.OPENABLE" />
+				<category android:name="android.intent.category.DEFAULT" />
+
+				<data android:mimeType="image/*" />
+			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.PICK" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<data android:mimeType="image/*" />
+			</intent-filter>
+		</activity>
 
 		<service
 			android:name="androidx.work.impl.foreground.SystemForegroundService"
