--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,5 @@ plugins {
 	alias(libs.plugins.hilt) apply false
 	alias(libs.plugins.ksp) apply false
 	alias(libs.plugins.room) apply false
+	alias(libs.plugins.kotlinx.serizliation) apply false
 }
