feat: Add Discord Rich Presence (Discord RPC) integration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,6 +150,7 @@ dependencies {
 	implementation libs.androidx.room.ktx
 	ksp libs.androidx.room.compiler
 
+	implementation libs.kizzyrpc
 	implementation libs.okhttp
 	implementation libs.okhttp.tls
 	implementation libs.okhttp.dnsoverhttps
