--- a/app/build.gradle
+++ b/app/build.gradle
@@ -172,6 +172,7 @@ dependencies {
 	implementation libs.ssiv
 	implementation libs.disk.lru.cache
 	implementation libs.markwon
+	implementation libs.kizzyrpc
 
 	implementation libs.acra.http
 	implementation libs.acra.dialog
